metadata/sf-prod/force-app/main/default/objects/User/fields/High_Value_Opportunity_Certified__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Opportunity_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LAMBDA-47467 Field to let team managers and admins specify whether user is High Value Opportunity certified or not</description>
    <inlineHelpText>Specifies if a user is certified to handle High-Value opportunity</inlineHelpText>
    <label>High-Value Opportunity Certified</label>
    <type>Checkbox</type>
</CustomField>