metadata/sf-prod/force-app/main/default/objects/User/fields/Mailbox_Synced__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if ISR has all mailboxes synced in Outreach</inlineHelpText>
    <label>Mailbox Synced</label>
    <type>Checkbox</type>
</CustomField>