metadata/sf-prod/force-app/main/default/objects/User/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <description>ID which is taken from the URL of the employee profile page in the NetSuite</description>
    <externalId>true</externalId>
    <inlineHelpText>Employee profile page is available at https://4914352.app.netsuite.com/app/common/entity/employee.nl?id=&lt;ID&gt; (replace &lt;ID&gt; with this field value)</inlineHelpText>
    <label>NetSuite ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>