metadata/sf-prod/force-app/main/default/objects/User/fields/Product_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Product_Certifications__c</fullName>
    <label>Product Assignments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Families</valueSetName>
    </valueSet>
</CustomField>