metadata/sf-prod/force-app/main/default/objects/User/fields/RepEndDay__c.field-meta.xml
<CustomField>
    <fullName>RepEndDay__c</fullName>
    <formula>TEXT(EndDay)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RepEndDay</label>
    <type>Text</type>
</CustomField>