metadata/sf-prod/force-app/main/default/objects/User/fields/RepStartDay__c.field-meta.xml
<CustomField>
    <fullName>RepStartDay__c</fullName>
    <formula>TEXT(StartDay)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RepStartDay</label>
    <type>Text</type>
</CustomField>