metadata/sf-prod/force-app/main/default/objects/User/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In case user is part of an automation (i.e. Outreach integration, Netsuite integraton), we expect this field value to be TRUE. This field will be used in order to determine if a record created by automation. i.e. If Record.CreatedBy.Service Account = TRUE when the record is created by an automation. LAMBDA-36987</description>
    <inlineHelpText>In case user is part of an automation (i.e. Outreach integration, Netsuite integraton), we expect this field value to be TRUE</inlineHelpText>
    <label>Service Account</label>
    <type>Checkbox</type>
</CustomField>