metadata/sf-prod/force-app/main/default/objects/User/validationRules/ISR_Mailbox_Synced_Required_for_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>ISR_Mailbox_Synced_Required_for_Product</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
UserRole.Name = &apos;ISR Renewals&apos;, 
IsActive == TRUE, 
Mailbox_Synced__c == False, 
NOT(ISBLANK( Product_Certifications__c ))
)</errorConditionFormula>
    <errorMessage>Mailbox in Outreach should be synced for ISR. Mailbox Synced should be checked before assigning any Product</errorMessage>
</ValidationRule>