metadata/sf-prod/force-app/main/default/objects/User/validationRules/ISRs_NS_ID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ISRs_NS_ID_Required</fullName>
    <active>true</active>
    <description>User with Role=ISR Renewals must have NetSuite ID set</description>
    <errorConditionFormula>AND(UserRole.Name = &apos;ISR Renewals&apos;,  ISBLANK( NetSuite_ID__c ))</errorConditionFormula>
    <errorDisplayField>NetSuite_ID__c</errorDisplayField>
    <errorMessage>User with Role=ISR Renewals must have NetSuite ID set</errorMessage>
</ValidationRule>