metadata/sf-prod/force-app/main/default/objects/User/listViews/DevGraph_Team.listView-meta.xml
<ListView>
    <fullName>DevGraph_Team</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Product_Certifications__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>equals</operation>
        <value>DevGraph</value>
    </filters>
    <label>DevGraph Team</label>
</ListView>